<resources>
    <string name="app_name">Crypt</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name='logout'>Logout</string>
    <string name="signup">Signup</string>
    <string name="changePassword">Change Password</string>
    <string name="plus">+</string>
    <string name="addNewPassword">Add New Password</string>
    <string name="addDataUsername">Username</string>
    <string name="addPassword">Add Password</string>
    <string name="settings">Settings</string>
    <string name="vault">Vault</string>
    <string name="copy">Copy To Clipboard</string>
    <string name="upgrade">Upgrade To Premium</string>
    <string name="generate">Generate Secure Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
